welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: missing arguments for method cigarParty in class cigarParty;
follow this method with `_' if you want to treat it as a partially applied function
  if ((isWeekend==true)&&(cigarParty>=40)){
                          ^cigarParty:4: error: missing arguments for method cigarParty in class cigarParty;
follow this method with `_' if you want to treat it as a partially applied function
  }else if((isWeekend==false)&&(cigarParty>=40 && cigarParty<=60)){
                                ^cigarParty:4: error: missing arguments for method cigarParty in class cigarParty;
follow this method with `_' if you want to treat it as a partially applied function
  }else if((isWeekend==false)&&(cigarParty>=40 && cigarParty<=60)){
                                                  ^