welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if ((isWeekend==true)&&(cigarParty>=40)){
    return true
  }else if((isWeekend==false)&&(cigarParty>=40 && cigarParty<=60)){
    return true
  }else{
    return false
  }
  }